more rawtypes removal (#1295)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>